# farnans-farming-game

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
.github/workflows/: rust.yml
saves/: home_data.txt  inventory_data.txt  market_data.txt  pest_data.txt
src/: UI.rs  agent.rs  anim.rs  barn.rs  commodities.rs  crop.rs  foo.txt  genes.rs  home_area.rs  home_data.txt  inventory.rs  item.rs  main.rs  market.rs  market_area.rs  market_data.txt  market_house.rs  market_item.rs  market_transition_menu.rs  pest.rs  pest_population.rs  player.rs  population.rs  save_load.rs  sleep_menu.rs  store.rs  tile.rs  tool.rs  trade_house.rs  utilities.rs
src/UI/: inventory.rs  mod.rs  ui.rs
