[package]
name = "farm_game"
version = "0.1.0"
authors = ["jack"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","mixer"]

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.1"
lazy_static = "1.4.0"
